; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_patch.c_bps_decode.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_patch.c_bps_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bps_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bps_data*)* @bps_decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bps_decode(%struct.bps_data* %0) #0 {
  %2 = alloca %struct.bps_data*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.bps_data* %0, %struct.bps_data** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 1, i32* %4, align 4
  br label %6

6:                                                ; preds = %19, %1
  %7 = load %struct.bps_data*, %struct.bps_data** %2, align 8
  %8 = call i32 @bps_read(%struct.bps_data* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = and i32 %9, 127
  %11 = load i32, i32* %4, align 4
  %12 = mul nsw i32 %10, %11
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 %13, %12
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %5, align 4
  %16 = and i32 %15, 128
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %6
  br label %25

19:                                               ; preds = %6
  %20 = load i32, i32* %4, align 4
  %21 = shl i32 %20, 7
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, %22
  store i32 %24, i32* %3, align 4
  br label %6

25:                                               ; preds = %18
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @bps_read(%struct.bps_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
